--- a/itis3135/project/events.html
+++ b/itis3135/project/events.html
@@ -1,62 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Conscious Closet - Events</title>
-    <link rel="stylesheet" href="styles/default.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Conscious Closet - Events</title>
+  <link rel="stylesheet" href="styles/default.css" />
+  <script src="scripts/HTML.Include.min.js" defer></script>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <h1>Upcoming Sustainability Events</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="submission.html">Submit Ideas</a>
-            <a href="events.html">Events</a>
-            <a href="links.html">Sustainable Brands</a>
-            <a href="info.html">Sustainability Info</a>
-            <a href="why.html">Why Sustainable?</a>
-            <a href="examples.html">Fashion Gallery</a>
-            <a href="what-can-you-do.html">Take Action</a>
-          </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Events Calendar</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Event Name</th>
-                        <th>Date</th>
-                        <th>Location</th>
-                        <th>Description</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Eco-Fashion Workshop</td>
-                        <td>May 10, 2025</td>
-                        <td>UNC Greensboro</td>
-                        <td>Learn how to repurpose old clothes into stylish pieces!</td>
-                    </tr>
-                    <tr>
-                        <td>Green Wardrobe Webinar</td>
-                        <td>June 5, 2025</td>
-                        <td>Online</td>
-                        <td>Virtual panel on ethical fashion practices and shopping tips.</td>
-                    </tr>
-                    <tr>
-                        <td>Community Swap Meet</td>
-                        <td>July 22, 2025</td>
-                        <td>Charlotte, NC</td>
-                        <td>Swap clothes with others and learn about conscious consumerism.</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </main>
-    <footer>
-        <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
-      </footer>
+  <header>
+    <h1>The Conscious Closet - Sustainable Fashion</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="submission.html">Submit Ideas</a>
+      <a href="events.html">Events</a>
+      <a href="links.html">Sustainable Brands</a>
+      <a href="info.html">Sustainability Info</a>
+      <a href="why.html">Why Sustainable?</a>
+      <a href="examples.html">Fashion Gallery</a>
+      <a href="what-can-you-do.html">Take Action</a>
+      <a href="founder.html">Founder</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Events Calendar</h2>
+      <p>Join our upcoming activities and learn how to live more sustainably while connecting with your local and online community.</p>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Event Name</th>
+            <th>Date</th>
+            <th>Location</th>
+            <th>Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Eco-Fashion Workshop</td>
+            <td>May 10, 2025</td>
+            <td>UNC Greensboro</td>
+            <td>Learn how to repurpose old clothes into stylish pieces!</td>
+          </tr>
+          <tr>
+            <td>Green Wardrobe Webinar</td>
+            <td>June 5, 2025</td>
+            <td>Online</td>
+            <td>Virtual panel on ethical fashion practices and shopping tips.</td>
+          </tr>
+          <tr>
+            <td>Community Swap Meet</td>
+            <td>July 22, 2025</td>
+            <td>Charlotte, NC</td>
+            <td>Swap clothes with others and learn about conscious consumerism.</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section class="cta">
+      <h3>Want to Host or Suggest an Event?</h3>
+      <p>We’re always looking to grow our impact! Submit your event or suggest a local opportunity.</p>
+      <a class="button" href="submission.html">Submit Your Event</a>
+    </section>
+
+    <section>
+      <h2>Resources for Attendees</h2>
+      <ul>
+        <li><a href="https://www.fashionrevolution.org/events/">Fashion Revolution: Global Events</a></li>
+        <li><a href="https://www.earthday.org/take-action-now/">Earth Day Toolkit</a></li>
+        <li><a href="links.html">Sustainable Brand Directory</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>2025 The Conscious Closet | Designed by 
+      <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a>
+    </p>
+  </footer>
 </body>
 </html>
