--- a/itis3135/project/index.html
+++ b/itis3135/project/index.html
@@ -1,37 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Conscious Closet - Home</title>
-    <link rel="stylesheet" href="styles/default.css">
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Conscious Closet - Home</title>
+  <link rel="stylesheet" href="styles/default.css" />
+  <script src="scripts/HTML.Include.min.js" defer></script>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <h1>The Conscious Closet - Sustainable Fashion</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="submission.html">Submit Ideas</a>
-            <a href="events.html">Events</a>
-            <a href="links.html">Sustainable Brands</a>
-            <a href="info.html">Sustainability Info</a>
-            <a href="why.html">Why Sustainable?</a>
-            <a href="examples.html">Fashion Gallery</a>
-            <a href="what-can-you-do.html">Take Action</a>
-          </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Welcome to The Conscious Closet</h2>
-            <p>
-                We promote sustainable fashion by educating users about eco-friendly choices, providing resources, and encouraging community engagement. 
-                Join us in reducing fashion waste and supporting ethical brands!
-            </p>
-        </section>
-    </main>
-    <footer>
-        <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
-      </footer>
+  <header>
+    <h1>The Conscious Closet - Sustainable Fashion</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="submission.html">Submit Ideas</a>
+      <a href="events.html">Events</a>
+      <a href="links.html">Sustainable Brands</a>
+      <a href="info.html">Sustainability Info</a>
+      <a href="why.html">Why Sustainable?</a>
+      <a href="examples.html">Fashion Gallery</a>
+      <a href="what-can-you-do.html">Take Action</a>
+      <a href="founder.html">Founder</a>
+    </nav>
+  </header>
+
+  <main>
+    <!-- Hero Section -->
+    <section class="hero">
+      <h2>Welcome to The Conscious Closet</h2>
+      <p>
+        Empowering you to make eco-conscious fashion choices. Discover how you can support ethical brands, reduce waste, and become a force for good in fashion.
+      </p>
+      <a class="button" href="what-can-you-do.html">Get Involved</a>
+    </section>
+
+    <!-- Quick Links -->
+    <section class="quick-links">
+      <h3>Explore Our Site</h3>
+      <div class="grid">
+        <a href="why.html" class="card">Why Sustainable?</a>
+        <a href="examples.html" class="card">Fashion Gallery</a>
+        <a href="links.html" class="card">Sustainable Brands</a>
+        <a href="events.html" class="card">Events Near You</a>
+      </div>
+    </section>
+
+    <!-- How It Works -->
+    <section>
+      <h3>How It Works</h3>
+      <ol>
+        <li><strong>Learn:</strong> Browse our info pages and gallery to understand the impact of fast fashion.</li>
+        <li><strong>Act:</strong> Take simple steps like donating, swapping, or buying second-hand.</li>
+        <li><strong>Inspire:</strong> Submit your ideas and spread awareness in your community.</li>
+      </ol>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="testimonials">
+      <h3>What Our Community Says</h3>
+      <blockquote>
+        “The Conscious Closet helped me rethink my wardrobe and connect with local swap events. I feel empowered!” – <em>Ava G.</em>
+      </blockquote>
+      <blockquote>
+        “A great place to start your sustainable fashion journey. It’s easy, friendly, and full of helpful tips.” – <em>Marcus T.</em>
+      </blockquote>
+    </section>
+
+    <!-- CTA -->
+    <section class="cta">
+      <h3>Ready to Make a Change?</h3>
+      <p>Join our growing community of changemakers. Start today by exploring how your fashion habits can help the planet.</p>
+      <a class="button" href="submission.html">Share Your Idea</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>2025 The Conscious Closet | Designed by 
+      <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a>
+    </p>
+  </footer>
 </body>
 </html>
