--- a/itis3135/project/info.html
+++ b/itis3135/project/info.html
@@ -1,35 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Information - The Conscious Closet</title>
-    <link rel="stylesheet" href="styles/default.css">
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Information - The Conscious Closet</title>
+  <link rel="stylesheet" href="styles/default.css" />
+  <script src="scripts/HTML.Include.min.js" defer></script>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <h1>General Information</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="submission.html">Submit Ideas</a>
-            <a href="events.html">Events</a>
-            <a href="links.html">Sustainable Brands</a>
-            <a href="info.html">Sustainability Info</a>
-            <a href="why.html">Why Sustainable?</a>
-            <a href="examples.html">Fashion Gallery</a>
-            <a href="what-can-you-do.html">Take Action</a>
-        </nav>
-      </header>
-        <h2>General Information on Sustainable Fashion</h2>
-        <p>Sustainable fashion refers to clothing that is designed, manufactured, distributed, and used in ways that are environmentally friendly. 
-            This includes reducing pollution, conserving water, and ensuring fair labor practices. 
-            Choosing eco-conscious materials and upcycling existing garments can greatly reduce the fashion industry's carbon footprint.</p>
-        <img src="images/sub_pic1.webp" alt="Sustainable cycle">
-        <img src="images/sustainable-clothing-materials.webp" alt="Sustainable materials">
+  <header>
+    <h1>The Conscious Closet - Sustainable Fashion</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="submission.html">Submit Ideas</a>
+      <a href="events.html">Events</a>
+      <a href="links.html">Sustainable Brands</a>
+      <a href="info.html">Sustainability Info</a>
+      <a href="why.html">Why Sustainable?</a>
+      <a href="examples.html">Fashion Gallery</a>
+      <a href="what-can-you-do.html">Take Action</a>
+      <a href="founder.html">Founder</a>
+    </nav>
+  </header>
 
-        <footer>
-            <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
-          </footer>
+  <main>
+    <section>
+        <h2>What is Sustainable Fashion?</h2>
+        <p>
+          Sustainable fashion refers to clothing that is designed, manufactured, distributed, and used in environmentally and socially responsible ways.
+          It reduces pollution, conserves resources, and promotes ethical labor practices. Opting for eco-conscious materials and upcycling garments 
+          helps cut down the fashion industry's carbon footprint.
+        </p>
+        <div class="image-row">
+          <img src="images/sub_pic1.png" alt="Sustainable cycle">
+          <img src="images/recycled-clothing-process.jpg" alt="Recycled clothing process">
+          <img src="images/ethical-production.webp" alt="Ethical production">
+        </div>
+      </section>
+
+    <section>
+      <h2>Core Pillars of Sustainability</h2>
+      <ul>
+        <li><strong>Environmental:</strong> Reducing pollution, waste, and resource consumption</li>
+        <li><strong>Social:</strong> Supporting fair wages, safe working conditions, and labor rights</li>
+        <li><strong>Economic:</strong> Creating long-lasting, quality garments that save money and reduce waste over time</li>
+      </ul>
+    </section>
+
+    <section>
+        <h2>Common Sustainable Fabrics</h2>
+        <ul>
+          <li>Organic cotton</li>
+          <li>Bamboo</li>
+          <li>Tencel (Lyocell)</li>
+          <li>Recycled polyester</li>
+          <li>Hemp</li>
+        </ul>
+        <div class="image-row">
+          <img src="images/sustainable-clothing-materials.png" alt="Sustainable materials">
+          <img src="images/types.jpg" alt="Types of sustainable fabrics">
+          <img src="images/textile-impact.png" alt="Textile impact">
+        </div>
+      </section>
+
+    <section>
+      <h2>The Life Cycle of Sustainable Fashion</h2>
+      <ol>
+        <li><strong>Design:</strong> Prioritizing low-impact materials and minimal waste patterns</li>
+        <li><strong>Production:</strong> Ethical manufacturing practices</li>
+        <li><strong>Use:</strong> Longevity, repair, and reuse</li>
+        <li><strong>End of Life:</strong> Recycling or upcycling to prevent landfill waste</li>
+      </ol>
+    </section>
+
+    <section class="cta">
+      <h3>Want to Learn More?</h3>
+      <p>Check out our sustainability resources and brand directory to get started on your journey.</p>
+      <a class="button" href="links.html">Sustainable Brand List</a>
+    </section>
+
+    <section>
+      <h2>Resources</h2>
+      <ul>
+        <li><a href="https://www.fashionrevolution.org/">Fashion Revolution</a></li>
+        <li><a href="https://goodonyou.eco/">Good On You (Brand Ratings)</a></li>
+        <li><a href="https://www.commonobjective.co/">Common Objective</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>2025 The Conscious Closet | Designed by 
+      <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a>
+    </p>
+  </footer>
 </body>
 </html>
