--- a/itis3135/project/what-can-you-do.html
+++ b/itis3135/project/what-can-you-do.html
@@ -1,38 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What Can You Do? - The Conscious Closet</title>
-    <link rel="stylesheet" href="styles/default.css">
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>What Can You Do? - The Conscious Closet</title>
+  <link rel="stylesheet" href="styles/default.css" />
+  <script src="scripts/HTML.Include.min.js" defer></script>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <h1>What Can You Do?</h1>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="submission.html">Submit Ideas</a>
-          <a href="events.html">Events</a>
-          <a href="links.html">Sustainable Brands</a>
-          <a href="info.html">Sustainability Info</a>
-          <a href="why.html">Why Sustainable?</a>
-          <a href="examples.html">Fashion Gallery</a>
-          <a href="what-can-you-do.html">Take Action</a>
-        </nav>
-      </header>
-      <main>
-            <h2>All on you</h2>
-            <p>You can make a difference by choosing second-hand clothing, repairing what you own, participating in clothing swaps, and supporting local 
-                sustainable brands. Even small actions add up to a big impact!</p>
-            <ul>
-                <li>Donate clothes instead of tossing them</li>
-                <li>Use eco-friendly detergents</li>
-                <li>Shop locally or from verified sustainable brands</li>
-            </ul>
-        </main>
-        <footer>
-            <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
-        </footer>
+  <header>
+    <h1>The Conscious Closet - Sustainable Fashion</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="submission.html">Submit Ideas</a>
+      <a href="events.html">Events</a>
+      <a href="links.html">Sustainable Brands</a>
+      <a href="info.html">Sustainability Info</a>
+      <a href="why.html">Why Sustainable?</a>
+      <a href="examples.html">Fashion Gallery</a>
+      <a href="what-can-you-do.html">Take Action</a>
+      <a href="founder.html">Founder</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>All on you</h2>
+      <p>You can make a difference by choosing second-hand clothing, repairing what you own, participating in clothing swaps, and supporting local 
+        sustainable brands. Even small actions add up to a big impact!</p>
+      <ul>
+        <li>Donate clothes instead of tossing them</li>
+        <li>Use eco-friendly detergents</li>
+        <li>Shop locally or from verified sustainable brands</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Make it a Lifestyle</h2>
+      <p>Beyond fashion, living sustainably means rethinking how you travel, eat, and shop. Here are a few suggestions:</p>
+      <ul>
+        <li>Bike, walk, or use public transportation when possible</li>
+        <li>Choose reusable containers, bags, and water bottles</li>
+        <li>Buy in bulk to reduce packaging waste</li>
+        <li>Support ethical companies that value transparency</li>
+      </ul>
+    </section>
+
+    <aside>
+      <blockquote>
+        “You cannot get through a single day without having an impact on the world around you. 
+        What you do makes a difference, and you have to decide what kind of difference you want to make.” 
+        — Jane Goodall
+      </blockquote>
+    </aside>
+
+    <section class="cta">
+      <h3>Ready to Take the First Step?</h3>
+      <p>Start today by clearing out your closet and donating clothes you haven’t worn in the past year. 
+         Every piece recycled is one less in a landfill.</p>
+      <a class="button" href="submission.html">Share Your Sustainability Tip</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
+  </footer>
 </body>
 </html>
