--- a/itis3135/project/why.html
+++ b/itis3135/project/why.html
@@ -1,35 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why Choose Sustainable Fashion? - The Conscious Closet</title>
-    <link rel="stylesheet" href="styles/default.css">
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Why Choose Sustainable Fashion? - The Conscious Closet</title>
+  <link rel="stylesheet" href="styles/default.css" />
+  <script src="scripts/HTML.Include.min.js" defer></script>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <h1>Why Choose Sustainable Fashion?</h1>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="submission.html">Submit Ideas</a>
-          <a href="events.html">Events</a>
-          <a href="links.html">Sustainable Brands</a>
-          <a href="info.html">Sustainability Info</a>
-          <a href="why.html">Why Sustainable?</a>
-          <a href="examples.html">Fashion Gallery</a>
-          <a href="what-can-you-do.html">Take Action</a>
-        </nav>
-      </header>
-        <main>
-            <h2>Why</h2>
-            <p>
-                Fast fashion has a massive environmental cost — it pollutes water, contributes to landfill waste, and often relies on exploitative labor. 
-                By choosing sustainable fashion, you support ethical practices and help preserve our planet for future generations.
-            </p>
-        </main>
-        <footer>
-            <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
-        </footer>
+  <header>
+    <h1>The Conscious Closet - Sustainable Fashion</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="submission.html">Submit Ideas</a>
+      <a href="events.html">Events</a>
+      <a href="links.html">Sustainable Brands</a>
+      <a href="info.html">Sustainability Info</a>
+      <a href="why.html">Why Sustainable?</a>
+      <a href="examples.html">Fashion Gallery</a>
+      <a href="what-can-you-do.html">Take Action</a>
+      <a href="founder.html">Founder</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>The Problem with Fast Fashion</h2>
+      <p>
+        Fast fashion has a massive environmental cost — it pollutes water, contributes to landfill waste, and often relies on exploitative labor. 
+        By choosing sustainable fashion, you support ethical practices and help preserve our planet for future generations.
+      </p>
+    </section>
+
+    <section>
+      <h2>Benefits of Sustainable Fashion</h2>
+      <ul>
+        <li>Reduces textile waste in landfills</li>
+        <li>Minimizes water usage and chemical pollution</li>
+        <li>Supports fair wages and safe working conditions</li>
+        <li>Promotes long-lasting, quality-made clothing</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Fast Fashion vs Sustainable Fashion</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Fast Fashion</th>
+            <th>Sustainable Fashion</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Mass production, low quality</td>
+            <td>Ethically made, durable</td>
+          </tr>
+          <tr>
+            <td>High carbon footprint</td>
+            <td>Eco-conscious materials</td>
+          </tr>
+          <tr>
+            <td>Exploitative labor</td>
+            <td>Fair trade & labor standards</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section>
+      <h2>Did You Know?</h2>
+      <ul>
+        <li>It takes 2,700 liters of water to make one cotton shirt — enough for one person to drink for 2.5 years.</li>
+        <li>The fashion industry is responsible for 10% of global carbon emissions.</li>
+        <li>Clothing production has roughly doubled since 2000, while garment use lifespan has decreased.</li>
+      </ul>
+    </section>
+
+    <aside>
+      <blockquote>
+        “Buy less, choose well, make it last.” — Vivienne Westwood
+      </blockquote>
+    </aside>
+
+    <section class="cta">
+      <h3>Make the Switch</h3>
+      <p>Join the movement toward conscious fashion. Start by exploring sustainable brands and changing one purchase habit at a time.</p>
+      <a class="button" href="links.html">Explore Brands</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
+  </footer>
 </body>
 </html>
