--- a/itis3135/project/submission.html
+++ b/itis3135/project/submission.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The Conscious Closet - Submit Your Idea</title>
   <link rel="stylesheet" href="styles/default.css" />
+  <script src="scripts/HTML.Include.min.js" defer></script>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
-    <h1>Submit Your Sustainable Fashion Idea</h1>
+    <h1>The Conscious Closet - Sustainable Fashion</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="submission.html">Submit Ideas</a>
@@ -18,6 +20,7 @@
       <a href="why.html">Why Sustainable?</a>
       <a href="examples.html">Fashion Gallery</a>
       <a href="what-can-you-do.html">Take Action</a>
+      <a href="founder.html">Founder</a>
     </nav>
   </header>
 
