--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -10,7 +10,7 @@
     <script src="scripts/HTML.Include.min.js" defer></script>
     <style>
         body {
-    font-family: Arial, sans-serif;
+    font-family:Tahoma, sans-serif;
     background-color: #FFF3E0;
     color: #5A3E20;
     margin: 0;
@@ -35,6 +35,7 @@ h1 {
     align-items: center;
     justify-content: center;
     gap: 10px;
+    color: whitesmoke;
 }
 
 header img {
@@ -154,6 +155,7 @@ input[type="text"], input[type="file"], input[type="tel"], input[type="email"], 
     border-radius: 4px;
     background-color: #f8f5f0;
     color: #4a3f35;
+    box-sizing: border-box;
 }
 
 /* Checkbox and Radio Button Styling */
@@ -181,6 +183,7 @@ button, input[type="submit"], input[type="reset"] {
     border-radius: 4px;
     width: 100%;
     font-weight: bold;
+    box-sizing: border-box;
 }
 
 button:hover, input[type="submit"]:hover, input[type="reset"]:hover {
