--- a/itis3135/joyful_lion/about.html
+++ b/itis3135/joyful_lion/about.html
@@ -12,10 +12,8 @@
     <header>
         <h1>Joyful Lion</h1>
         <nav>
-            <a href="./">Home</a>
-            ||
-            <a href="about.html">About</a>
-            ||
+            <a href="./">Home</a> ||
+            <a href="about.html">About</a> ||
             <a href="../index.html">ITIS Course Website</a>
         </nav>
     </header>
