--- a/itis3135/joyful_lion/index.html
+++ b/itis3135/joyful_lion/index.html
@@ -12,17 +12,16 @@
     <header>
         <h1>Joyful Lion</h1>
         <nav>
-            <a href="./">Home</a>
-            ||
-            <a href="about.html">About</a>
-            ||
+            <a href="./">Home</a>||
+            <a href="about.html">About</a> ||
             <a href="../index.html">ITIS Course Website</a>
         </nav>
     </header>
 
     <main>
         <h2>Joyful Lion </h2>
-        <p> This is content for my Company</p>
+        <p> This is content for my Company.  </p>
+        <img src="images/joyful-lion.png" alt="Joyful Lion"/>
     </main>
 
     <footer>
