--- a/itis3135/project/examples.html
+++ b/itis3135/project/examples.html
@@ -131,6 +131,12 @@ h2 {
         <img src="images/upcycled-jeans.png" alt="Upcycled jeans" />
         <div class="caption">Upcycled jeans transformed into patchwork fashion</div>
       </div>
+
+      
+      <div class="gallery-item">
+        <img src="images/bag.png" alt="bag" />
+        <div class="caption">2 tone recycled promotional bag in cotton and recycled polyester with drawstring and long handles.</div>
+      </div>
     </section>
   </main>
 
