--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -8,7 +8,7 @@
     <script src="scripts/HTML.Include.min.js" defer></script>
 <style>
     body {
-        font-family: Arial, sans-serif;
+        font-family: Tahoma, sans-serif;
         background-color: #FFF3E0;
         color: #5A3E20;
         margin: 0;
@@ -56,6 +56,7 @@
         background-color: white;
         border-radius: 10px;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+        font-family: Tahoma, sans-serif;
     }
     h2, h3 {
         color: #D87C20;
