--- a/itis3135/links.html
+++ b/itis3135/links.html
@@ -24,5 +24,10 @@
     </main>
 
     <div data-include="components/footer.html"></div>
+
+    <script>
+        document. getElementById("validation_link_html"). setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
+        document.getElementById("validation_link_css"). setAttribute ("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+    </script>
 </body>
 </html>
