--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -267,5 +267,10 @@
   <p>Signed by <em>Jonathan Lutabingwa, 04/14/25 11:32 PM</em></p>
 
   <div data-include="components/footer.html"></div>
+
+  <script>
+    document. getElementById("validation_link_html"). setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
+    document.getElementById("validation_link_css"). setAttribute ("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+</script>
 </body>
 </html>
